# ein

./: .clangd  .gitattributes  .gitignore  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  Dockerfile  Dockerfile.local  Doxyfile.in  GNUmakefile  LICENSE.md  LICENSE_8md.html  README.md  README_8md.html  SECURITY.md  SECURITY_8md.html  annotated.html  annotated_dup.js  assert_8hpp.html  assert_8hpp.js  assert_8hpp__dep__incl.dot  assert_8hpp__dep__incl.map  assert_8hpp__dep__incl.md5  assert_8hpp__incl.map  assert_8hpp__incl.md5  assert_8hpp_source.html  attributes_2memory_8hpp.html  attributes_2memory_8hpp.js  attributes_2memory_8hpp__dep__incl.map  attributes_2memory_8hpp__dep__incl.md5  attributes_2memory_8hpp__incl.map  attributes_2memory_8hpp__incl.md5  attributes_2memory_8hpp_source.html  attributes_8hpp.html  attributes_8hpp.js  (+945 more)
.ccache/: ccache.conf
.github/workflows/: .build.yml.swp  build.yml  cmake-multi-platform.yml  cmake.yml
cmake/: CheckRestrict.cmake  GitHash.cmake
d0/d17/: structein_1_1wait_1_1umwait.html  structein_1_1wait_1_1umwait.js
d0/d54/: structstd_1_1tuple__size_3_01ein_1_1simd_3_01_t_00_01_n_01_4_01_4__coll__graph.dot
d0/d83/: std_8hpp__incl.dot
d0/dc2/: main_8dox.html
d0/def/: wait_8cppm.html  wait_8cppm.js  wait_8cppm_source.html
d1/d1e/: group__cuda.dot  group__cuda.html  group__cuda.js
d1/d21/: structein_1_1memory_1_1c__munmap-members.html
d1/d4f/: third-party_8hpp__incl.dot
d1/d51/: group__string__safety__attributes.dot  group__string__safety__attributes.html  group__string__safety__attributes.js
d1/d7d/: conceptein_1_1types_1_1not__one__of__t.html
d1/d89/: structein_1_1simd.html  structein_1_1simd.js  structein_1_1simd_a42d5d3b89c087711f7c7268f9872c800_icgraph.dot  structein_1_1simd_a46c1b89940d707f5c9013599bac488ba_icgraph.dot  structein_1_1simd_a51d72e83b553d4faabb189cb4259ad71_icgraph.dot  structein_1_1simd_ab84a2bbadea73893d88f5755ce94e88f_icgraph.dot
d1/d8c/: std_8hpp.html  std_8hpp_source.html
d1/def/: types_8cppm__incl.dot
d2/d01/: module__ein.html  module__ein.js
d2/d0f/: attributes_8hpp__incl.dot
d2/d15/: pch_8dox.html
d2/d35/: md__l_i_c_e_n_s_e.html
d2/d4d/: pch.html  pch.js
d2/d50/: memory_8cppm__incl.dot
d2/d54/: assert_8hpp.html  assert_8hpp.js  assert_8hpp_source.html  group__instantiation.dot  group__instantiation.html  group__instantiation.js
d2/d8a/: cpuid_8cppm.html  cpuid_8cppm.js  cpuid_8cppm_source.html
d2/db2/: group__multiversioning__attributes.dot  group__multiversioning__attributes.html  group__multiversioning__attributes.js
d2/dca/: conceptein_1_1types_1_1one__of__t.html
d3/d32/: structein_1_1memory_1_1c__free-members.html
d3/d4e/: group__inlining__attributes.dot  group__inlining__attributes.html  group__inlining__attributes.js
d3/d5e/: group__pragmas.dot  group__pragmas.html  group__pragmas.js
d3/da4/: intrinsics_8hpp__incl.dot
d3/dbb/: wait_8cpp.html  wait_8cpp_source.html
d4/d04/: structein_1_1simd-members.html
d4/d34/: module__ein_8simd__data.html  module__ein_8simd__data.js
d4/d75/: group__alignment.js  (+2 more)
doc/: CMakeLists.txt  Doxyfile.in  files.dox  main.dox
doc/assets/: doxygen-awesome.css.patch  footer.html  header.html
doc/assets/fonts/: LICENSE.spdx
dox/: Doxyfile.in  Makefile
doxygen/: CMakeLists.txt  Doxyfile.in  LICENSE.spdx  custom.css  header.css  header.html  trace.js
doxygen/assets/: LICENSE.spdx  header.html  prefetch.js  service-worker.js
doxygen/assets/images/svg/: LICENSE.spdx
doxygen/fonts/: LICENSE.spdx
etc/: subdir.mk
h/: .cpuid.hpp.swp  CMakeLists.txt  Makefile  assert.hpp  attributes.hpp  config.hpp.in  cpuid.hpp  intrinsics.hpp  map.hpp  memory.h  memory.hpp  numerics.hpp  posix.hpp  prelude.hpp  pretty.h  profiling.hpp  simd.hpp  static_string.hpp  std.hpp  third-party.hpp  types.hpp  wait.hpp
lib/: LICENSE.spdx
pub/: cpuid.dox  files.dox  install.dox  main.dox  notes.dox  pch.dox
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  concepts_0.js  (+111 more)
src/: .simd.cppm.swo  .simd.cppm.swp  CMakeLists.txt  assert.hpp  attributes.hpp  bf16.cppm  cpu.cpp  cpu.cppm  cpuid.cpp  cpuid.cppm  fp16.cppm  fp16.hpp  map.hpp  memory.cppm  numerics.cpp  numerics.cppm  numerics.x  prelude.hpp  pretty.cpp  pretty.cppm  profiling.cppm  simd.cpp  simd.cppm  simd_data.cppm  static_string.cppm  std.cppm  types.cppm  wait.cpp  wait.cppm
src/ein/: CMakeLists.txt  assert.cppm  assert.hpp  attributes.hpp  concepts.cpp  concepts.hpp  concepts_tests.cpp  config.hpp.in  cpuid.cpp  cpuid.hpp  cpuid_tests.cpp  map.hpp  memory.cpp  memory.cppm  memory.hpp  memory_tests.cpp  mwait.cppm  numerics.cpp  numerics.hpp  numerics.x  numerics_tests.cpp  prelude.hpp  pretty.cpp  pretty.hpp  profiling.cpp  profiling.hpp  profiling_tests.cpp  simd.hpp  simd_data.hpp  static_string.cpp  static_string.hpp  static_string_tests.cpp  tests.cpp  types.cpp  types.cppm  types.hpp  types_tests.cpp  util.cppm  wait.cpp  wait.hpp  (+1 more)
src/ein/attributes/: calling_conventions.hpp  common.hpp  control_flow.hpp  cuda.hpp  detection.hpp  handles.hpp  initialization.hpp  inlining.hpp  lifetimes.hpp  linkage.hpp  memory.hpp  null_safety.hpp  performance_constraints.hpp  purity.hpp  strings.hpp  targets.hpp  thread_safety.hpp  typestate.hpp
src/ein/numerics/: bf16.cpp  bf16.hpp  bf16_tests.cpp  fp16.cpp  fp16.hpp  fp16_tests.cpp
src/ein/std/: forward_like.hpp
src/numerics/: bf16.cppm  fp16.cppm
t/: CMakeLists.txt  bf16.cpp  concepts.cpp  cpuid.cpp  fp16.cpp  memory.cpp  numerics.cpp  profiling.cpp  static_string.cpp  t_bf16.cpp  t_fp16.cpp  types.cpp  wait.cpp
(+287 files in other folders)
